# skippy

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  index.data  index.html  index.js  index.wasm  styles.css
public/: index.html  styles.css
scripts/: build.sh  run.sh
src/: application.c  application.h  clock.c  clock.h  main.c  player.c  player.h  turners.c  turners.h
src/core/: application.c  application.h  audio.c  audio.h  clock.c  clock.h  dependencies.c  dependencies.h  draw.c  draw.h  entity.c  entity.h  font.c  font.h  log.h  renderer.c  renderer.h  texture.c  texture.h  texture_manager.c  texture_manager.h  timer.c  timer.h  window.c  window.h
src/event/: event.h  key.h  mouse.h
src/game/: collision_manager.c  collision_manager.h  collision_system.c  collision_system.h  event.h  game_manager.c  game_manager.h  highscore.c  highscore.h  player.c  player.h  prompt.c  prompt.h  scoreboard.c  scoreboard.h  turners.c  turners.h
src/renderer/: draw.c  draw.h  renderer.c  texture.c  texture.h
